@@ -84,6 +84,7 @@ def additionalResourcesDir = "build/${qupathOutputDir}"
  * JavaFX version
  */
 def jfxVersion = '16'
+def jfxModules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.media', 'javafx.web', 'javafx.swing']
 
 /*
  * Placeholder to use OpenCV binaries with GPU support... if/when this is supported (warning: they are quite big)
@@ -303,10 +304,12 @@ allprojects {
     groovy "org.codehaus.groovy:groovy-jsr223:${groovyVersion}"
     groovy "org.codehaus.groovy:groovy-xml:${groovyVersion}"
 
-    for (fx in ['javafx-base', 'javafx-controls', 'javafx-graphics', 'javafx-media', 'javafx-web', 'javafx-swing']) {
+	 
+	for (fx in jfxModules.collect{it.replace('.', '-')}) {
       javafx "org.openjfx:${fx}:${jfxVersion}"
       javafx "org.openjfx:${fx}:${jfxVersion}:${platform}"
     }
+    
 
     richtextfx "org.fxmisc.richtext:richtextfx:${richtextVersion}"
 
@@ -702,6 +705,8 @@ task createRuntime(dependsOn:build, type:Exec) {
     	'jdk.zipfs',           // Needed for zip filesystem support
     ]
     
+    requiredModules.addAll(jfxModules)
+    
     def usefulModules = [
         'java.net.http',        // Add HttpClient support (may be used by scripts)
     	'java.management',      // Useful to check memory usage
@@ -726,6 +731,13 @@ task createRuntime(dependsOn:build, type:Exec) {
     def params = ["${jdkHome}/bin/jlink"]
    
     params << '--output' << outputDir.getAbsolutePath()
+    
+	// JavaFX should be on the module path, not the classpath (warning logged since Java 16)
+    def jfxModulePath = configurations.runtimeClasspath.files.findAll({ it.getName().startsWith('javafx-') }).collect {it.getAbsolutePath()}
+    jfxModulePath = String.join(File.pathSeparator, jfxModulePath)
+//    println("MODULE PATH: " + jfxModulePath)
+    params << '--module-path' << jfxModulePath
+    
     params << '--add-modules' << addModules
     
     if (jreModules == 'default')
@@ -776,6 +788,11 @@ task createPackage(dependsOn:createRuntime, type:Exec) {
 
     // Temp workaround for kyro and Bio-Formats memoization - see https://github.com/ome/bioformats/issues/3659
    	javaOptions << '--add-opens=java.base/java.util.regex=ALL-UNNAMED'		
+   	// Needed to set style/theme
+   	javaOptions << '--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
+   	// Needed for ControlsFX/BreadcrumbBar (could export to org.controlsfx if it was on the module path)
+   	javaOptions << '--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED'
+	javaOptions << '--add-exports=javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED'
 
     def params = ["${jdkHome}/bin/jpackage"]
 
